<resources>
    <string name="app_name">andFHEM</string>
    <string name="unsortedRoomName">unsorted</string>
    <string name="deviceName">Name</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="moonRise">Moon Rise</string>
    <string name="moonSet">Moon Set</string>
    <string name="windChill">Windchill</string>
    <string name="rain">Rain</string>
    <string name="rainToday">Regen Today</string>
    <string name="rainYesterday">Regen Yesterday</string>
    <string name="humidity">Humidity</string>
    <string name="actuator">Actuator</string>
    <string name="state">State</string>
    <string name="reportedState">Reported State</string>
    <string name="battery">Battery</string>
    <string name="batteryVoltage">Battery voltage</string>
    <string name="measured">Measured</string>
    <string name="warnings">Warnings</string>
    <string name="time">Time</string>
    <string name="avgHour">Average Hour</string>
    <string name="avgDay">Average Day</string>
    <string name="avgYear">Average Year</string>
    <string name="avgMonth">Average Month</string>
    <string name="minDay">Minimum Day</string>
    <string name="minMonth">Minimum Month</string>
    <string name="maxDay">Maximum Day</string>
    <string name="maxMonth">Maximum Month</string>
    <string name="isRaining">Is Raining?</string>
    <string name="sunshine">Sonneneinstrahlung</string>
    <string name="desiredTemperature">Desired Temperature</string>
    <string name="comfortTemperature">Comfort-Temperature</string>
    <string name="ecoTemperature">Eco-Temperature</string>
    <string name="maximumTemperature">Maximum Temperature</string>
    <string name="minimumTemperature">Minimum Tempeature</string>
    <string name="forecast">Forecast</string>
    <string name="pressure">Pressure</string>
    <string name="pressureNN">Pressure NN</string>
    <string name="dewpoint">Dewpoint</string>
    <string name="rainRate">Rain Rate</string>
    <string name="rainTotal">Rain Total</string>
    <string name="windAvgSpeed">Wind Avg. Speed</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="windDirection">Wind Direction</string>
    <string name="uvValue">UV Value</string>
    <string name="uvRisk">UV Risk</string>
    <string name="rooms">Room</string>
    <string name="room">Room</string>
    <string name="counterA">Counter A</string>
    <string name="counterB">Counter B</string>
    <string name="inputA">Input A</string>
    <string name="inputB">Input B</string>
    <string name="inputC">Input C</string>
    <string name="inputD">Input D</string>
    <string name="counterReadingTariff1">Counter reading tariff 1</string>
    <string name="counterReading">Counter reading</string>
    <string name="present">Present</string>
    <string name="currentUsage">Current Usage</string>
    <string name="currentVoltage">Current Voltage</string>
    <string name="hourUsage">Hour usage</string>
    <string name="dayUsage">Day Usage</string>
    <string name="dayLastUsage">Last day Usage</string>
    <string name="monthUsage">Month Usage</string>
    <string name="yearUsage">Year Usage</string>
    <string name="lastStateChange">Last State Change</string>
    <string name="lastState">Last State</string>
    <string name="powerState">Power State</string>
    <string name="power">Power</string>
    <string name="stopReason">Stop Reason</string>
    <string name="audio">Audio</string>
    <string name="audioMode">Audio mode</string>
    <string name="input">Input</string>
    <string name="mode">Mode</string>
    <string name="definition">Definition</string>
    <string name="regression">regression</string>
    <string name="sum">Sum</string>
    <string name="mac">MAC address</string>
    <string name="ip">IP address</string>
    <string name="wake">Wake</string>
    <string name="isRunning">Is Running?</string>
    <string name="shutdown">Shutdown</string>
    <string name="stateAppendix">Set %1$s to</string>
    <string name="requestRefresh">Request refresh</string>
    <string name="delta">Delta</string>
    <string name="weather">Weather</string>
    <string name="visibilityCondition">Visibility condition</string>
    <string name="currentWeather">Current Weather</string>
    <string name="dimUp">Dim +</string>
    <string name="dimDown">Dim -</string>
    <string name="actions">Actions</string>
    <string name="model">Model</string>
    <string name="send">Send</string>
    <string name="error">Error!</string>
    <string name="error_send">Send last error</string>
    <string name="error_send_content">AndFHEM can send the last error as mail to the developer. Continue?</string>
    <string name="error_send_no_error">Cannot send an error, as none is registered!</string>
    <string name="errorDeviceListLoad">Could not load %1$s device(s)!</string>
    <string name="errorOutdatedData">Sensor data seems to be outdated. Make sure the device sends data.</string>
    <string name="application_log_send">Send application log</string>
    <string name="errorExternalStorageNotPresent">File system not accessible.</string>
    <string name="errorNotAValidBackupFile">Cannot read file. Is this really a andFHEM backup file?</string>
    <string name="hex2quat">Hex -> Quat</string>
    <string name="quat2hex">Quat -> Hex</string>
    <string name="result">Result</string>
    <string name="set_value">Set value</string>
    <string name="set">Set</string>
    <string name="android_version">Android Version</string>
    <string name="feature_requires_android_version">This feature requires a minimum Android version of %1$s.</string>
    <string name="unknown">unknown</string>
    <string name="type">Type</string>
    <string name="attributeName">Attribute-Name</string>
    <string name="about">About</string>
    <string name="copyFrom">Copy from …</string>
    <string name="commandAccepted">Command accepted?</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="stop">stop</string>
    <string name="visibility">visibility</string>
    <string name="rawValue">Raw value</string>
    <string name="content">Content</string>
    <string name="fillPercentage">Fill percentage</string>
    <string name="maximumContent">Maximum content</string>
    <string name="currentSwitchTime">Current Switch Time</string>
    <string name="currentSwitchDevice">Current Device</string>
    <string name="lastSwitchTime">Last Trigger</string>
    <string name="nextSwitchTime">Next Trigger</string>
    <string name="windchill">Windchill</string>
    <string name="deleteConfirmation">Are you sure you want to delete the device from FHEM?</string>
    <string name="isActive">Active?</string>
    <string name="deactivated">deactivated</string>
    <string name="brightness">Brightness</string>
    <string name="motion">Motion</string>
    <string name="thermostatThresholdOn">Thermostat On-Threshold</string>
    <string name="thermostatThresholdOff">Thermostat Off-Threshold</string>
    <string name="valveThresholdOff">Valve Off-Threshold</string>
    <string name="valveThresholdOn">Valve On-Threshold</string>
    <string name="ecoThresholdOn">Eco Off-Threshold</string>
    <string name="ecoThresholdOff">Eco On-Threshold</string>
    <string name="excludedDevices">Excluded devices</string>
    <string name="idleDevices">Idle devices</string>
    <string name="demandDevices">Demand devices</string>
    <string name="target">Target</string>
    <string name="noGraphEntries">No data found.</string>
    <string name="showGraph">Show Graph</string>
    <string name="delete">Delete</string>
    <string name="deleteConfirmIntervalText">Do you really want to delete the interval?</string>
    <string name="newInterval">New interval</string>
    <string name="price">Price</string>
    <string name="pricePerDay">Price/day</string>
    <string name="energy">Energy</string>
    <string name="cumulativeUsage">Cumulative</string>
    <string name="voltage">Voltage</string>
    <string name="current">Current</string>
    <string name="saturation">Saturation</string>
    <string name="hue">Hue</string>
    <string name="color">Colour</string>
    <string name="alarm">Alarm</string>
    <string name="apiKey">API Key</string>
    <string name="gcmAlreadyRegistered">Device is already registered!</string>
    <string name="gcmRegistrationNotActive">FCM not active! Is the cloud messaging sender-id valid?</string>
    <string name="gcmRegisterThis">Register this device</string>
    <string name="gcmSuccessfullyRegistered">Device was registered.</string>
    <string name="notificationAllUpdates">All updates</string>
    <string name="notificationStateUpdates">Only state updates</string>
    <string name="notificationNoUpdates">None</string>
    <string name="callMonExternalName">Caller</string>
    <string name="callMonExternalNumber">Number external</string>
    <string name="callMonInternalNumber">Number internal</string>
    <string name="callMonMissedNumber">Number missed</string>
    <string name="callMonDuration">Duration</string>
    <string name="callMonEvent">Event</string>
    <string name="callMonEventRing">Ringing</string>
    <string name="callMonEventCall">Calling</string>
    <string name="callMonEventConnect">Connected</string>
    <string name="callMonEventDisconnect">Disconnect</string>
    <string name="callMonEventMissed">Missed</string>
    <string name="webcmd">WebCmds</string>
    <string name="temperatureMinimum">Min temperature</string>
    <string name="temperatureMaximum">Max temperature</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="devicelist_empty">Sorry! No devices found!</string>
    <string name="energy_current">Current</string>
    <string name="energy_power">Power</string>
    <string name="energy_powerFactor">Power factor</string>
    <string name="energy_frequency">Frequenz</string>
    <string name="energy_consumption">Consumption</string>
    <string name="additional_information">Additional information</string>
    <string name="channel">Channel</string>
    <string name="currentTitle">Current title</string>
    <string name="serviceName">Service name</string>
    <string name="shutterPosition">Shutter position</string>
    <string name="sendEachColorChange">Send each color change</string>
    <string name="level">Level</string>
    <string name="scene">Scene</string>
    <string name="cost">Cost</string>
    <string name="co2">CO2</string>
    <string name="hiddenRooms">Hidden rooms</string>
    <string name="hiddenGroups">Hidden groups</string>
    <string name="sortRooms">Room sort</string>
    <string name="pwm0">PWM0</string>
    <string name="pwm1">PWM1</string>
    <string name="wrongPassword">Invalid password!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fatFreeMass">Mass fatfree</string>
    <string name="fatMass">Mass fat</string>
    <string name="fatRatio">Ratio fat</string>
    <string name="heartPulse">Pulse</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="noise">Noise</string>
    <string name="location">Location</string>
    <string name="mood">Mood</string>
    <string name="hourMinuteFormat" translatable="false">HH:MM</string>
    <string name="sleep">Sleep</string>
    <string name="connectionName">Name</string>
    <string name="connectionType">Type</string>
    <string name="connectionSetupTitle">Set up your FHEM connection</string>
    <string name="connectionSetupIntro">Follow these steps to connect andFHEM. Your settings stay on this device.</string>
    <string name="connectionSetupStepServer">1. Server</string>
    <string name="connectionSetupStepAccess">2. Access and security</string>
    <string name="connectionTest">Test connection</string>
</resources>