<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ AndFHEM - Open Source Android application to control a FHEM home automation
  ~ server.
  ~
  ~ Copyright (c) 2011, Matthias Klass or third-party contributors as
  ~ indicated by the @author tags or express copyright attribution
  ~ statements applied by the authors.  All third-party contributions are
  ~ distributed under license by Red Hat Inc.
  ~
  ~ This copyrighted material is made available to anyone wishing to use, modify,
  ~ copy, or redistribute it subject to the terms and conditions of the GNU GENERAL PUBLIC LICENSE, as published by the Free Software Foundation.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU GENERAL PUBLIC LICENSE
  ~ for more details.
  ~
  ~ You should have received a copy of the GNU GENERAL PUBLIC LICENSE
  ~ along with this distribution; if not, write to:
  ~   Free Software Foundation, Inc.
  ~   51 Franklin Street, Fifth Floor
  ~   Boston, MA  02110-1301  USA
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/fragmentContent">

        <TextView
            style="@style/sectionHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:text="@string/connectionSetupTitle" />

        <TextView
            style="@style/helperText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:layout_marginBottom="@dimen/space_l"
            android:text="@string/connectionSetupIntro" />

        <TextView
            style="@style/sectionHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connectionSetupStepServer" />

        <TextView
            android:id="@+id/nameLabel"
            style="@style/formLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/connectionName"
            android:text="@string/connectionName" />

        <EditText
            android:id="@+id/connectionName"
            style="@style/formInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete" />

        <TextView
            android:id="@+id/connectionTypeLabel"
            style="@style/formLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/connectionType"
            android:text="@string/connectionType" />

        <Spinner
            android:id="@+id/connectionType"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_min"
            android:minHeight="@dimen/touch_target_min" />

        <TextView
            style="@style/sectionHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/connectionSetupStepAccess" />

        <FrameLayout
            android:id="@+id/connectionPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/testConnection"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_min"
            android:layout_marginTop="@dimen/space_l"
            android:text="@string/connectionTest" />

        <TextView
            android:id="@+id/connectionTestStatus"
            style="@style/helperText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_s"
            android:layout_marginBottom="@dimen/space_l"
            android:accessibilityLiveRegion="polite"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>